Start adding credentials to media embed iframe URLs.
By knowing the ID36 of a link, it is possible to see its media embed
because the embed request is served off-domain and as a result can't
verify the user's cookie.  To fix this, we add an authentication code to
the iframe URL for media embeds and require its presence for all embeds
in private subreddits.

This starts appending credentials to private subreddit embeds such that
when the latter half of the fix is deployed all apps are already
generating appropriate embed URLs.

This is part of a fix for an information disclosure vulnerability
reported by Jordan Milne (/u/largenocream).

--- a/r2/r2/templates/mediaembed.html
+++ b/r2/r2/templates/mediaembed.html
@@ -23,7 +23,7 @@
 <%!
   from r2.lib.utils import randstr
 %>
-<iframe src="//${thing.media_domain}/mediaembed/${thing.id36}"
+<iframe src="//${thing.media_domain}/mediaembed/${thing.id36}${thing.credentials}"
         id="media-embed-${thing.id36}-${randstr(3)}" class="media-embed"
         width="${thing.width}" height="${thing.height}" border="0"
         frameBorder="0" scrolling="${'auto' if thing.scrolling else 'no'}"
