Disable subreddit stylesheets for old IEs.
Their CSS parsing is so poor that the risk of exploits is much higher.

--- a/r2/r2/templates/reddit.html
+++ b/r2/r2/templates/reddit.html
@@ -62,10 +62,12 @@
 
 <%def name="sr_stylesheets()">
   %if thing.subreddit_stylesheet_url:
+    <!--[if gte IE 8]> -->
     <link rel="stylesheet"
           href="${thing.subreddit_stylesheet_url}"
           title="applied_subreddit_stylesheet"
           type="text/css">
+    <!-- <![endif]-->
   %endif
 </%def>
 
